Fix navbar covering settings menu during close animation
Only happened on chromium, not firefox or mobile. As soon as close button clicked the navbar and top-left button appeared above settings menu.

--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -3,7 +3,7 @@
 /* Container dialog */
 dialog.settings-menu {
     /* Prevent display: none when closed (allow open animation to run) */
-    @apply block text-base-content;
+    @apply block text-base-content z-99;
 
     /* Slide open animation */
     &[open] {
